--- a/CryptoCurrency/Login Module/View/Storyboard/Base.lproj/Login.storyboard
+++ b/CryptoCurrency/Login Module/View/Storyboard/Base.lproj/Login.storyboard
@@ -15,13 +15,122 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="avT-8M-FaP" userLabel="Container View">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1kn-p5-Opy">
+                                        <rect key="frame" x="83" y="50" width="248" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="YFj-Yk-xnI"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6E-ym-LVc" userLabel="Email Label">
+                                        <rect key="frame" x="40" y="238" width="46.5" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="1Yh-8W-IAE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="soN-6J-Tg5" userLabel="Email Textfield">
+                                        <rect key="frame" x="40" y="276" width="334" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="xJW-1l-QNF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="email"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8P-iI-O8A" userLabel="Password Label">
+                                        <rect key="frame" x="40" y="332" width="334" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="RLK-xT-Dfn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yrk-0D-TZL" userLabel="Password Textfield">
+                                        <rect key="frame" x="40" y="380" width="334" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="o9M-F5-ZoT"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evZ-ud-dtQ" userLabel="Login Button">
+                                        <rect key="frame" x="167" y="480" width="80" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="EDw-Tx-dL2"/>
+                                            <constraint firstAttribute="height" constant="40" id="uns-mN-6v7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="didPressLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W4g-7E-75E"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hug-cH-xch" userLabel="Sign Up Button">
+                                        <rect key="frame" x="173.5" y="762" width="67" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="QRG-PN-og2"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="didPressSignUpButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IfP-4E-DcE"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="w6E-ym-LVc" firstAttribute="top" secondItem="1kn-p5-Opy" secondAttribute="bottom" constant="60" id="2z3-cD-N9J"/>
+                                    <constraint firstItem="w6E-ym-LVc" firstAttribute="leading" secondItem="avT-8M-FaP" secondAttribute="leading" constant="40" id="3S9-bJ-B6E"/>
+                                    <constraint firstItem="soN-6J-Tg5" firstAttribute="top" secondItem="w6E-ym-LVc" secondAttribute="bottom" constant="8" id="5JQ-w8-uou"/>
+                                    <constraint firstItem="1kn-p5-Opy" firstAttribute="centerX" secondItem="avT-8M-FaP" secondAttribute="centerX" id="7gP-PO-Paf"/>
+                                    <constraint firstItem="evZ-ud-dtQ" firstAttribute="top" secondItem="Yrk-0D-TZL" secondAttribute="bottom" constant="60" id="BPK-M3-1E1"/>
+                                    <constraint firstItem="Hug-cH-xch" firstAttribute="centerX" secondItem="avT-8M-FaP" secondAttribute="centerX" id="NB5-ae-CGU"/>
+                                    <constraint firstItem="K8P-iI-O8A" firstAttribute="top" secondItem="soN-6J-Tg5" secondAttribute="bottom" constant="16" id="P84-MJ-aQR"/>
+                                    <constraint firstItem="Hug-cH-xch" firstAttribute="top" relation="greaterThanOrEqual" secondItem="evZ-ud-dtQ" secondAttribute="bottom" constant="20" id="WDQ-Jm-E81"/>
+                                    <constraint firstAttribute="trailing" secondItem="K8P-iI-O8A" secondAttribute="trailing" constant="40" id="ay0-Ta-MEn"/>
+                                    <constraint firstItem="Yrk-0D-TZL" firstAttribute="leading" secondItem="avT-8M-FaP" secondAttribute="leading" constant="40" id="cO4-Yd-i2h"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yrk-0D-TZL" secondAttribute="trailing" constant="40" id="d6Z-Cg-ilw"/>
+                                    <constraint firstItem="K8P-iI-O8A" firstAttribute="leading" secondItem="avT-8M-FaP" secondAttribute="leading" constant="40" id="eZh-qP-1g1"/>
+                                    <constraint firstItem="soN-6J-Tg5" firstAttribute="leading" secondItem="avT-8M-FaP" secondAttribute="leading" constant="40" id="jJq-Tj-gzv"/>
+                                    <constraint firstItem="1kn-p5-Opy" firstAttribute="top" secondItem="avT-8M-FaP" secondAttribute="top" constant="50" id="lGG-go-VYE"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hug-cH-xch" secondAttribute="bottom" constant="16" id="lMv-Ih-NQp"/>
+                                    <constraint firstItem="Yrk-0D-TZL" firstAttribute="top" secondItem="K8P-iI-O8A" secondAttribute="bottom" constant="8" id="oU6-aT-hXo"/>
+                                    <constraint firstItem="1kn-p5-Opy" firstAttribute="width" secondItem="avT-8M-FaP" secondAttribute="width" multiplier="0.6" id="qYQ-SG-XDr"/>
+                                    <constraint firstItem="evZ-ud-dtQ" firstAttribute="centerX" secondItem="avT-8M-FaP" secondAttribute="centerX" id="rLL-tx-KIZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="soN-6J-Tg5" secondAttribute="trailing" constant="40" id="s9Y-DF-5l7"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="avT-8M-FaP" secondAttribute="bottom" id="4KX-1m-Gyz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="avT-8M-FaP" secondAttribute="trailing" id="HRr-zQ-8Xg"/>
+                            <constraint firstItem="avT-8M-FaP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OKE-p8-HNT"/>
+                            <constraint firstItem="avT-8M-FaP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fPA-RA-F1i"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="containerView" destination="avT-8M-FaP" id="Lkq-47-s6J"/>
+                        <outlet property="emailLabel" destination="w6E-ym-LVc" id="8io-WX-xX6"/>
+                        <outlet property="emailTextField" destination="soN-6J-Tg5" id="Bye-aG-E4X"/>
+                        <outlet property="imageView" destination="1kn-p5-Opy" id="Uqh-Ch-5Tw"/>
+                        <outlet property="loginButton" destination="evZ-ud-dtQ" id="76q-MA-eah"/>
+                        <outlet property="passwordLabel" destination="K8P-iI-O8A" id="DiX-XR-9eB"/>
+                        <outlet property="passwordTextField" destination="Yrk-0D-TZL" id="rXu-11-z79"/>
+                        <outlet property="signUpButton" destination="Hug-cH-xch" id="ZDU-ZI-efP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="98"/>
+            <point key="canvasLocation" x="131.8840579710145" y="97.767857142857139"/>
         </scene>
     </scenes>
     <resources>
