--- a/CryptoCurrency/Sign Up Module/View/Storyboard/SignUp.storyboard
+++ b/CryptoCurrency/Sign Up Module/View/Storyboard/SignUp.storyboard
@@ -71,12 +71,13 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F6K-WV-42m" userLabel="Sign Up Button">
-                                        <rect key="frame" x="40" y="454" width="334" height="40"/>
+                                        <rect key="frame" x="147" y="454" width="120" height="40"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="hE9-dz-NAh"/>
                                             <constraint firstAttribute="height" constant="40" id="pDC-mF-7xK"/>
                                         </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
                                         <connections>
                                             <action selector="didPressSignUpButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Gnb-Cz-26d"/>
                                         </connections>
@@ -85,11 +86,10 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Lo9-Tt-hJ5" secondAttribute="trailing" constant="40" id="1tT-Ub-Ojf"/>
-                                    <constraint firstItem="F6K-WV-42m" firstAttribute="leading" secondItem="UG0-rP-2YY" secondAttribute="leading" constant="40" id="3l1-kc-81d"/>
+                                    <constraint firstItem="F6K-WV-42m" firstAttribute="centerX" secondItem="UG0-rP-2YY" secondAttribute="centerX" id="31B-oE-5cp"/>
                                     <constraint firstItem="aoR-4v-fai" firstAttribute="leading" secondItem="UG0-rP-2YY" secondAttribute="leading" constant="40" id="4WC-Wy-LE4"/>
                                     <constraint firstItem="5RG-6g-qec" firstAttribute="top" secondItem="0Hz-JG-MaE" secondAttribute="bottom" constant="8" id="7c9-fX-JBW"/>
                                     <constraint firstItem="7yD-Un-aQ3" firstAttribute="leading" secondItem="UG0-rP-2YY" secondAttribute="leading" constant="40" id="9MG-YQ-Rgg"/>
-                                    <constraint firstAttribute="trailing" secondItem="F6K-WV-42m" secondAttribute="trailing" constant="40" id="CPd-Wg-cyf"/>
                                     <constraint firstItem="aoR-4v-fai" firstAttribute="top" secondItem="MkD-eM-W82" secondAttribute="bottom" constant="8" id="DdO-e7-maV"/>
                                     <constraint firstItem="MkD-eM-W82" firstAttribute="top" secondItem="Lo9-Tt-hJ5" secondAttribute="bottom" constant="40" id="Hbn-GU-uw3"/>
                                     <constraint firstItem="0Hz-JG-MaE" firstAttribute="leading" secondItem="UG0-rP-2YY" secondAttribute="leading" constant="40" id="Spy-m5-Mps"/>
