--- a/CryptoCurrency/Home Module/View/Helper/Table View Cell/CurrencyTableViewCell.xib
+++ b/CryptoCurrency/Home Module/View/Helper/Table View Cell/CurrencyTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,80 +23,80 @@
                         <rect key="frame" x="8" y="8" width="304" height="141"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2GK-ir-B8W">
-                                <rect key="frame" x="8" y="8" width="40" height="40"/>
+                                <rect key="frame" x="8" y="30.666666666666657" width="80" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="Mqm-ma-eTB"/>
-                                    <constraint firstAttribute="height" constant="40" id="lHB-Zv-A4O"/>
+                                    <constraint firstAttribute="width" constant="80" id="Mqm-ma-eTB"/>
+                                    <constraint firstAttribute="height" constant="80" id="lHB-Zv-A4O"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pby-CU-gMa" userLabel="Name Label">
-                                <rect key="frame" x="56" y="8" width="192" height="40"/>
+                                <rect key="frame" x="96" y="8" width="112" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Plg-JT-veW"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="21"/>
+                                <color key="textColor" name="backgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUZ-CA-kPw" userLabel="Percentage Label">
-                                <rect key="frame" x="256" y="8" width="40" height="40"/>
+                                <rect key="frame" x="216" y="8" width="80" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="MSz-mw-okJ"/>
-                                    <constraint firstAttribute="width" constant="40" id="cki-Ml-bsQ"/>
+                                    <constraint firstAttribute="width" constant="80" id="cki-Ml-bsQ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="DI4-oo-dch" userLabel="Info Stack View">
-                                <rect key="frame" x="8" y="56" width="288" height="77"/>
+                                <rect key="frame" x="104" y="64" width="192" height="69"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="rHt-Hf-OAM" userLabel="Price Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="23.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="192" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-cd-ObP" userLabel="Price Key Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="124.33333333333333" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="21"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <color key="textColor" name="backgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2I-Si-8zF" userLabel="Price Value Label">
-                                                <rect key="frame" x="137.33333333333337" y="0.0" width="150.66666666666663" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2I-Si-8zF" userLabel="Price Value Label">
+                                                <rect key="frame" x="94.666666666666657" y="0.0" width="97.333333333333343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="1TK-s5-1xI" userLabel="High 24h Stack View">
-                                        <rect key="frame" x="0.0" y="26.666666666666671" width="288" height="23.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="24" width="192" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxh-6b-tvu" userLabel="High 24h Key Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="124.33333333333333" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="21"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <color key="textColor" name="backgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKh-Mw-W7I" userLabel="High 24h Value Label">
-                                                <rect key="frame" x="137.33333333333337" y="0.0" width="150.66666666666663" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKh-Mw-W7I" userLabel="High 24h Value Label">
+                                                <rect key="frame" x="94.666666666666657" y="0.0" width="97.333333333333343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="jmH-Fa-Toh" userLabel="Low 24h Stack View">
-                                        <rect key="frame" x="0.0" y="53.333333333333321" width="288" height="23.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="48" width="192" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWB-x7-1QO" userLabel="Low 24h Key Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="124.33333333333333" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="21"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <color key="textColor" name="backgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-4i-mr0" userLabel="Low 24h Value Label">
-                                                <rect key="frame" x="137.33333333333337" y="0.0" width="150.66666666666663" height="23.666666666666668"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-4i-mr0" userLabel="Low 24h Value Label">
+                                                <rect key="frame" x="94.666666666666657" y="0.0" width="97.333333333333343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -106,17 +107,17 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="DI4-oo-dch" firstAttribute="leading" secondItem="bkR-cM-a63" secondAttribute="leading" constant="8" id="9hM-2e-FcS"/>
+                            <constraint firstItem="DI4-oo-dch" firstAttribute="top" secondItem="pby-CU-gMa" secondAttribute="bottom" constant="16" id="COQ-gA-FAV"/>
                             <constraint firstAttribute="trailing" secondItem="jUZ-CA-kPw" secondAttribute="trailing" constant="8" id="Gu4-ya-Mzy"/>
-                            <constraint firstItem="2GK-ir-B8W" firstAttribute="leading" secondItem="bkR-cM-a63" secondAttribute="leading" constant="8" id="J2J-1a-oim"/>
-                            <constraint firstItem="pby-CU-gMa" firstAttribute="leading" secondItem="2GK-ir-B8W" secondAttribute="trailing" constant="8" id="PCc-8B-FxS"/>
+                            <constraint firstItem="pby-CU-gMa" firstAttribute="leading" secondItem="2GK-ir-B8W" secondAttribute="trailing" constant="8" id="Hlw-vV-Ago"/>
+                            <constraint firstItem="2GK-ir-B8W" firstAttribute="leading" secondItem="bkR-cM-a63" secondAttribute="leading" constant="8" id="SIU-gW-ujI"/>
                             <constraint firstItem="jUZ-CA-kPw" firstAttribute="top" secondItem="bkR-cM-a63" secondAttribute="top" constant="8" id="SPw-1J-Gv8"/>
-                            <constraint firstItem="DI4-oo-dch" firstAttribute="top" secondItem="2GK-ir-B8W" secondAttribute="bottom" constant="8" id="ZLb-Ji-wCp"/>
+                            <constraint firstItem="DI4-oo-dch" firstAttribute="leading" secondItem="2GK-ir-B8W" secondAttribute="trailing" constant="16" id="Tre-KS-AZq"/>
                             <constraint firstItem="pby-CU-gMa" firstAttribute="top" secondItem="bkR-cM-a63" secondAttribute="top" constant="8" id="ekC-6h-bqe"/>
                             <constraint firstAttribute="trailing" secondItem="DI4-oo-dch" secondAttribute="trailing" constant="8" id="f91-Ua-h7i"/>
                             <constraint firstItem="jUZ-CA-kPw" firstAttribute="leading" secondItem="pby-CU-gMa" secondAttribute="trailing" constant="8" id="fmY-eS-MsC"/>
+                            <constraint firstItem="2GK-ir-B8W" firstAttribute="centerY" secondItem="bkR-cM-a63" secondAttribute="centerY" id="oUn-JA-Rgg"/>
                             <constraint firstAttribute="bottom" secondItem="DI4-oo-dch" secondAttribute="bottom" constant="8" id="soA-9e-YRU"/>
-                            <constraint firstItem="2GK-ir-B8W" firstAttribute="top" secondItem="bkR-cM-a63" secondAttribute="top" constant="8" id="yOT-XJ-Xbx"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -144,6 +145,9 @@
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="backgroundColor">
+            <color red="0.11400000005960464" green="0.21199999749660492" blue="0.40400001406669617" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
